Bumped version of sz-sdk-java-grpc to 0.3